api and console

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 COMPOSE_DEBUG=${DEV_MODE:-false}
 IDP_AUTHORITY_PORT=7000
 IDP_LOGINAPP_PORT=3001
+IDP_API_PORT=7700
 IDP_AUTHORITY=http://localhost:${IDP_AUTHORITY_PORT}
 IDP_LOGINAPP=http://localhost:${IDP_LOGINAPP_PORT}
+IDP_API=http://localhost:${IDP_API_PORT}
