--- a/compose.yaml
+++ b/compose.yaml
@@ -31,6 +31,15 @@ services:
       - IDP_LOGOUTURL=/logout
       - IDP_CONSENTURL=${IDP_LOGINAPP}/consent
       - LogLevel=Debug
+  
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile_Api
+    ports:
+      - "${IDP_API_PORT}:80"
+    environment:
+      - LogLevel=Debug
 
   login-app:
     build:
