--- a/ConsoleClient/ConsoleClient.csproj
+++ b/ConsoleClient/ConsoleClient.csproj
@@ -8,7 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Duende.AccessTokenManagement" Version="3.2.0" />
       <PackageReference Include="IdentityModel" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.8" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
     </ItemGroup>
