--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 COMPOSE_DEBUG=${DEV_MODE:-false}
-IDP_AUTHORITY_PORT=7000
-IDP_LOGINAPP_PORT=3001
-IDP_API_PORT=7700
-IDP_AUTHORITY=http://localhost:${IDP_AUTHORITY_PORT}
-IDP_LOGINAPP=http://localhost:${IDP_LOGINAPP_PORT}
-IDP_API=http://localhost:${IDP_API_PORT}
+IDP_AUTHORITY_PORT=7001
+IDP_LOGINAPP_PORT=8443
+IDP_API_PORT=7701
+IDP_AUTHORITY=https://login.local:${IDP_AUTHORITY_PORT}
+IDP_LOGINAPP=https://login.local:${IDP_LOGINAPP_PORT}
+IDP_API=https://api.local:${IDP_API_PORT}
