--- a/idui/nginx.conf
+++ b/idui/nginx.conf
@@ -1,12 +1,29 @@
+# HTTP server - redirect to HTTPS
 server {
     listen 80;
     server_name localhost;
+    return 301 https://$host$request_uri;
+}
+
+# HTTPS server
+server {
+    listen 443 ssl;
+    server_name localhost;
     root /usr/share/nginx/html;
-    
+
+    # SSL certificate configuration
+    ssl_certificate /etc/nginx/certs/server.crt;
+    ssl_certificate_key /etc/nginx/certs/server.key;
+
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
     # Gzip compression
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-    
+
     location / {
         try_files $uri $uri/ /index.html;
         expires -1;
