--- a/ClientApplication/ClientApplication.csproj
+++ b/ClientApplication/ClientApplication.csproj
@@ -7,6 +7,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Duende.BFF" Version="4.0.1" />
+		<PackageReference Include="Duende.BFF.Yarp" Version="4.0.1" />
 		<PackageReference Include="IdentityModel" Version="7.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.10" />
 		<PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
