--- a/Dockerfile_Api
+++ b/Dockerfile_Api
@@ -20,8 +20,8 @@ WORKDIR /app
 
 COPY --from=build /app .
 
-EXPOSE 80
+EXPOSE 80 443
 
-ENV ASPNETCORE_URLS=http://+:80
+ENV ASPNETCORE_URLS=http://+:80;https://+:443
 
 ENTRYPOINT ["dotnet", "./Api.dll"]
