--- a/Dockerfile_IdUi
+++ b/Dockerfile_IdUi
@@ -21,14 +21,21 @@ RUN npm run build
 # Production stage
 FROM nginx:alpine
 
+# Install OpenSSL for certificate conversion
+RUN apk add --no-cache openssl
+
 # Copy built assets from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
 # Copy nginx configuration
 COPY idui/nginx.conf /etc/nginx/conf.d/default.conf
 
-# Expose port 80
-EXPOSE 80
+# Copy entrypoint script and fix line endings
+COPY idui/docker-entrypoint.sh /docker-entrypoint.sh
+RUN sed -i 's/\r$//' /docker-entrypoint.sh && chmod +x /docker-entrypoint.sh
 
-# Start nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Expose port 80, 443
+EXPOSE 80 443
+
+# Use custom entrypoint
+ENTRYPOINT ["/docker-entrypoint.sh"]
