--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ COMPOSE_DEBUG=${DEV_MODE:-false}
 IDP_AUTHORITY_PORT=7001
 IDP_LOGINAPP_PORT=8443
 IDP_API_PORT=7701
-IDP_AUTHORITY=https://login.local:${IDP_AUTHORITY_PORT}
+IDP_AUTHORITY=https://idp.local:${IDP_AUTHORITY_PORT}
 IDP_LOGINAPP=https://login.local:${IDP_LOGINAPP_PORT}
 IDP_API=https://api.local:${IDP_API_PORT}
